# ttydo

./: .gitignore  Cargo.toml  LICENSE  README.md  TODO.md  flake.nix
crates/commandstream/: Cargo.toml
crates/commandstream/src/: lib.rs
crates/ttycommand/: Cargo.toml
crates/ttycommand/src/: lib.rs
crates/ttydo/: main.rs
src/: app.rs  args.rs  config.rs  main.rs  xcommand.rs
