[package]
name = "ind"
version = "0.2.0"
edition = "2021"
description = "Run a process and indent its stdout and stderr"
license-file = "LICENSE"
readme = "README.md"
repository = "https://gitlab.com/adam_gaia/ind"
homepage = "https://gitlab.com/adam_gaia/ind"

[dependencies]
anyhow = "1.0.65"
async-stream = "0.3.3"
clap = { version = "4.0.15", features = ["derive", "cargo"] }
directories-next = "2.0.0"
env_logger = "0.9.1"
futures-core = "0.3.25"
log = "0.4.17"
serde = { version = "1.0.147", features = ["serde_derive"] }
tokio = { version = "1.21.2", features = ["process", "macros", "full"] }
tokio-stream = { version = "0.1.11", features = ["io-util"] }
toml = "0.5.9"
which = "4.3.0"

