[package]
name = "ttydo"
version = "0.1.0"
edition = "2021"
authors = ["Adam Gaia"]
description = "Run a process with a pseudo-terminal. Useful for running screen-based programs in scripts"
license-file = "LICENSE"
readme = "README.md"
documentation = "https://github.com/adam-gaia/ttydo"
repository = "https://github.com/adam-gaia/ttydo"
homepage = "https://github.com/adam-gaia/ttydo"
keywords = ["tty", "pty", "terminal", "pseudo-terminal"]
categories = ["command-line-utilities"]

[[bin]]
path = "crates/ttydo/main.rs"
name = "ttydo"

[dependencies]
commandstream = { version = "0.1.0", path = "crates/commandstream"}
anyhow = "1.0.65"
clap = { version = "4.0.15", features = ["derive", "cargo"] }
env_logger = "0.9.1"
log = "0.4.17"
tokio = { version = "1.21.2", features = ["full"] }

[workspace]
members = [
  "crates/ttycommand",
  "crates/commandstream",
]
