[package]
name = "commandstream"
version = "0.2.0"
edition = "2021"
authors = ["Adam Gaia"]
description = "Stream the stdout and stderr of a command"
readme = "README.md"
license = "MIT"

[dependencies]
ttycommand = {version = "0.1.0", path = "../ttycommand"}
async-trait = "0.1.60"
futures-util = "0.3.25"
log = "0.4.17"
tokio-stream = { version = "0.1.11", features = ["io-util"] }
color-eyre = "0.6.3"
