[package]
name = "ttycommand"
version = "0.1.0"
edition = "2021"
authors = ["Adam Gaia"]
description = "Run a command, forcing pty allocation"
readme = "README.md"
license = "MIT"

[dependencies]
async-stream = "0.3.3"
color-eyre = "0.6.3"
futures = "0.3.25"
futures-core = "0.3.25"
futures-util = "0.3.25"
libc = "0.2.137"
log = "0.4.17"
nix = { version = "0.29.0", features = ["fs", "process", "term"] }
serde = { version = "1.0.147", features = ["serde_derive"] }
tokio = { version = "1.21.2", features = ["full"] }
tokio-fd = "0.3.0"
tokio-stream = { version = "0.1.11", features = ["io-util"] }
toml = "0.8.0"
which = "6.0.0"
